# DK_App

./: DK_App.code-workspace  README.md
dk_server_ws/: .dockerignore  .gitignore  Dockerfile
dk_server_ws/dk-server/: pyproject.toml
dk_server_ws/dk-server/src/devscripts/: start.sh
dk_server_ws/dk-server/src/dk_server/: __init__.py  main.py
dk_server_ws/scripts/: clean.ps1  run.ps1
