[project]
name = "dk-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaden Gryphon", email = "kadengryphon@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
dk-server = "dk_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
